# llm-practice

./: pyproject.toml
llm/: polyglot-ko-1.3b.ipynb  skt_kogpt_2.ipynb  basic_opt_125m.ipynb  docker-compose.yml  rag.ipynb  weaviate-ui.yml
llm/.ipynb_checkpoints/: skt_kogpt_2-checkpoint.ipynb  weaviate-checkpoint.ipynb
